artifacts/macos-x86_64-artifact/dojo.h

struct ToriiClient;
struct Policy;
struct ControllerAccount;
struct Call;
struct Entity;
struct Transaction;
struct Subscription;
struct Struct;
struct Token;
struct TokenBalance;
struct Provider;
struct Ty;
typedef enum BlockTag {
  Latest,
  Pending,
} BlockTag;
typedef struct Error {
  char *message;
} Error;
typedef struct FieldElement {
  uint8_t data[32];
} FieldElement;
typedef enum Resultbool_Tag {
  Okbool,
  Errbool,
} Resultbool_Tag;
typedef struct Resultbool {
  Resultbool_Tag tag;
  union {
    struct {
      bool ok;
    };
    struct {
      struct Error err;
    };
  };
} Resultbool;
typedef enum ResultFieldElement_Tag {
  OkFieldElement,
  ErrFieldElement,
} ResultFieldElement_Tag;
typedef struct ResultFieldElement {
  ResultFieldElement_Tag tag;
  union {
    struct {
      struct FieldElement ok;
    };
    struct {
      struct Error err;
    };
  };
} ResultFieldElement;
typedef struct CArrayFieldElement {
  struct FieldElement *data;
  uintptr_t data_len;
} CArrayFieldElement;
typedef enum ResultCArrayFieldElement_Tag {
  OkCArrayFieldElement,
  ErrCArrayFieldElement,
} ResultCArrayFieldElement_Tag;
typedef struct ResultCArrayFieldElement {
  ResultCArrayFieldElement_Tag tag;
  union {
    struct {
      struct CArrayFieldElement ok;
    };
    struct {
      struct Error err;
    };
  };
} ResultCArrayFieldElement;
typedef struct KeysClause {
  struct CArrayCOptionFieldElement keys;
  enum PatternMatching pattern_matching;
  struct CArrayc_char models;
} KeysClause;
typedef struct U256 {
  uint8_t data[32];
} U256;
typedef struct Primitive {
  Primitive_Tag tag;
  union {
    struct {
      int8_t i8;
    };
    struct {
      int16_t i16;
    };
    struct {
      int32_t i32;
    };
    struct {
      int64_t i64;
    };
    struct {
      uint8_t i128[16];
    };
    struct {
      uint8_t u8;
    };
    struct {
      uint16_t u16;
    };
    struct {
      uint32_t u32;
    };
    struct {
      uint64_t u64;
    };
    struct {
      uint8_t u128[16];
    };
    struct {
      struct U256 u256;
    };
    struct {
      bool bool_;
    };
    struct {
      struct FieldElement felt252;
    };
    struct {
      struct FieldElement class_hash;
    };
    struct {
      struct FieldElement contract_address;
    };
    struct {
      struct FieldElement eth_address;
    };
  };
} Primitive;
typedef struct COptionClause {
  COptionClause_Tag tag;
  union {
    struct {
      struct Clause some;
    };
  };
} COptionClause;
typedef struct CArrayModel {
  struct Model *data;
  uintptr_t data_len;
} CArrayModel;
typedef struct World {
  struct FieldElement world_address;
  struct CArrayModel models;
} World;
typedef struct COptionTransactionFilter {
  COptionTransactionFilter_Tag tag;
  union {
    struct {
      struct TransactionFilter some;
    };
  };
} COptionTransactionFilter;
typedef enum ResultSubscription_Tag {
  OkSubscription,
  ErrSubscription,
} ResultSubscription_Tag;
typedef struct ResultSubscription {
  ResultSubscription_Tag tag;
  union {
    struct {
      struct Subscription *ok;
    };
    struct {
      struct Error err;
    };
  };
} ResultSubscription;
typedef struct CArrayTransactionCall {
  struct TransactionCall *data;
  uintptr_t data_len;
} CArrayTransactionCall;
typedef struct Transaction {
  struct FieldElement transaction_hash;
  struct FieldElement sender_address;
  struct CArrayFieldElement calldata;
  struct FieldElement max_fee;
  struct CArrayFieldElement signature;
  struct FieldElement nonce;
  uint64_t block_number;
  const char *transaction_type;
  uint64_t block_timestamp;
  struct CArrayTransactionCall calls;
  struct CArrayFieldElement unique_models;
} Transaction;
typedef struct CArrayStruct {
  struct Struct *data;
  uintptr_t data_len;
} CArrayStruct;
typedef struct Event {
  struct CArrayFieldElement keys;
  struct CArrayFieldElement data;
  struct FieldElement transaction_hash;
} Event;
typedef struct COptionU256 {
  COptionU256_Tag tag;
  union {
    struct {
      struct U256 some;
    };
  };
} COptionU256;
typedef struct Token {
  struct FieldElement contract_address;
  struct COptionU256 token_id;
  const char *name;
  const char *symbol;
  uint8_t decimals;
  const char *metadata;
} Token;
typedef struct IndexerUpdate {
  int64_t head;
  int64_t tps;
  int64_t last_block_timestamp;
  struct FieldElement contract_address;
} IndexerUpdate;
typedef struct TokenBalance {
  struct U256 balance;
  struct FieldElement account_address;
  struct FieldElement contract_address;
  struct COptionU256 token_id;
} TokenBalance;
typedef enum Resultc_char_Tag {
  Okc_char,
  Errc_char,
} Resultc_char_Tag;
typedef struct Resultc_char {
  Resultc_char_Tag tag;
  union {
    struct {
      const char *ok;
    };
    struct {
      struct Error err;
    };
  };
} Resultc_char;
typedef struct Signature {
  struct FieldElement r;
  struct FieldElement s;
} Signature;
typedef enum ResultSignature_Tag {
  OkSignature,
  ErrSignature,
} ResultSignature_Tag;
typedef struct ResultSignature {
  ResultSignature_Tag tag;
  union {
    struct {
      struct Signature ok;
    };
    struct {
      struct Error err;
    };
  };
} ResultSignature;
typedef enum ResultProvider_Tag {
  OkProvider,
  ErrProvider,
} ResultProvider_Tag;
typedef struct ResultProvider {
  ResultProvider_Tag tag;
  union {
    struct {
      struct Provider *ok;
    };
    struct {
      struct Error err;
    };
  };
} ResultProvider;
typedef struct Call {
  struct FieldElement to;
  const char *selector;
  struct CArrayFieldElement calldata;
} Call;
typedef enum BlockId_Tag {
  Hash,
  Number,
  BlockTag_,
} BlockId_Tag;
typedef struct BlockId {
  BlockId_Tag tag;
  union {
    struct {
      struct FieldElement hash;
    };
    struct {
      uint64_t number;
    };
    struct {
      enum BlockTag block_tag;
    };
  };
} BlockId;
typedef struct Policy {
  struct FieldElement target;
  const char *method;
  const char *description;
} Policy;
typedef struct Entity {
  struct FieldElement hashed_keys;
  struct CArrayStruct models;
} Entity;
typedef struct CArrayMember {
  struct Member *data;
  uintptr_t data_len;
} CArrayMember;
typedef struct Struct {
  const char *name;
  struct CArrayMember children;
} Struct;
typedef struct Enum {
  const char *name;
  uint8_t option;
  struct CArrayEnumOption options;
} Enum;
typedef struct CArrayTy {
  struct Ty *data;
  uintptr_t data_len;
} CArrayTy;
typedef enum Ty_Tag {
  Primitive_,
  Struct_,
  Enum_,
  Tuple_,
  Array_,
  ByteArray,
} Ty_Tag;
typedef struct Ty {
  Ty_Tag tag;
  union {
    struct {
      struct Primitive primitive;
    };
    struct {
      struct Struct struct_;
    };
    struct {
      struct Enum enum_;
    };
    struct {
      struct CArrayTy tuple;
    };
    struct {
      struct CArrayTy array;
    };
    struct {
      const char *byte_array;
    };
  };
} Ty;
void controller_connect(const char *rpc_url,
                        const struct Policy *policies,
                        uintptr_t policies_len,
                        void (*account_callback)(struct ControllerAccount*));
const char *controller_username(struct ControllerAccount *controller);
struct ResultFieldElement controller_nonce(struct ControllerAccount *controller);
struct ResultFieldElement controller_execute_raw(struct ControllerAccount *controller,
                                                 const struct Call *calldata,
                                                 uintptr_t calldata_len);
struct ResultFieldElement controller_execute_from_outside(struct ControllerAccount *controller,
                                                          const struct Call *calldata,
                                                          uintptr_t calldata_len);
void client_set_logger(struct ToriiClient *client, void (*logger)(const char*));
struct ResultSubscription client_on_transaction(struct ToriiClient *client,
                                                struct COptionTransactionFilter filter,
                                                void (*callback)(struct Transaction));
struct ResultSubscription client_on_entity_state_update(struct ToriiClient *client,
                                                        struct COptionClause clause,
                                                        void (*callback)(struct FieldElement,
                                                                         struct CArrayStruct));
struct ResultSubscription client_on_event_message_update(struct ToriiClient *client,
                                                         struct COptionClause clause,
                                                         void (*callback)(struct FieldElement,
                                                                          struct CArrayStruct));
struct ResultSubscription client_on_starknet_event(struct ToriiClient *client,
                                                   const struct KeysClause *clauses,
                                                   uintptr_t clauses_len,
                                                   void (*callback)(struct Event));
struct ResultSubscription client_on_token_update(struct ToriiClient *client,
                                                 const struct FieldElement *contract_addresses,
                                                 uintptr_t contract_addresses_len,
                                                 const struct U256 *token_ids,
                                                 uintptr_t token_ids_len,
                                                 void (*callback)(struct Token));
struct ResultSubscription on_indexer_update(struct ToriiClient *client,
                                            const struct FieldElement *contract_address,
                                            void (*callback)(struct IndexerUpdate));
struct ResultSubscription client_on_token_balance_update(struct ToriiClient *client,
                                                         const struct FieldElement *contract_addresses,
                                                         uintptr_t contract_addresses_len,
                                                         const struct FieldElement *account_addresses,
                                                         uintptr_t account_addresses_len,
                                                         const struct U256 *token_ids,
                                                         uintptr_t token_ids_len,
                                                         void (*callback)(struct TokenBalance));
struct FieldElement poseidon_hash(const struct FieldElement *felts, uintptr_t felts_len);
struct ResultFieldElement get_selector_from_name(const char *name);
struct FieldElement get_selector_from_tag(const char *tag);
struct FieldElement starknet_keccak(const uint8_t *bytes, uintptr_t bytes_len);
struct Resultc_char parse_cairo_short_string(struct FieldElement felt);
struct ResultFieldElement typed_data_encode(const char *typed_data, struct FieldElement address);
struct FieldElement signing_key_new(void);
struct ResultSignature signing_key_sign(struct FieldElement private_key, struct FieldElement hash);
struct FieldElement verifying_key_new(struct FieldElement signing_key);
struct Resultbool verifying_key_verify(struct FieldElement verifying_key,
                                       struct FieldElement hash,
                                       struct Signature signature);
struct ResultProvider provider_new(const char *rpc_url);
struct ResultCArrayFieldElement starknet_call(struct Provider *provider,
                                              struct Call call,
                                              struct BlockId block_id);
struct FieldElement account_address(struct Account *account);
struct Resultbool wait_for_transaction(struct Provider *rpc, struct FieldElement txn_hash);
struct FieldElement hash_get_contract_address(struct FieldElement class_hash,
                                              struct FieldElement salt,
                                              const struct FieldElement *constructor_calldata,
                                              uintptr_t constructor_calldata_len,
                                              struct FieldElement deployer_address);
void subscription_cancel(struct Subscription *subscription);
void provider_free(struct Provider *rpc);
void model_free(struct Struct *model);
void ty_free(struct Ty *ty);
void entity_free(struct Entity *entity);
void error_free(struct Error *error);
void world_metadata_free(struct World *metadata);
void string_free(char *string);