Assets/Dojo/Runtime/Bindings/dojo.gen.cs


        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "controller_execute_from_outside", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultFieldElement controller_execute_from_outside(ControllerAccount* controller, Call* calldata, UIntPtr calldata_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "controller_execute_raw", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultFieldElement controller_execute_raw(ControllerAccount* controller, Call* calldata, UIntPtr calldata_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "controller_nonce", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultFieldElement controller_nonce(ControllerAccount* controller);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "controller_username", CallingConvention = CallingConvention.Cdecl)]
        public static extern CString controller_username(ControllerAccount* controller);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "entity_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void entity_free(Entity* entity);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "error_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void error_free(Error* error);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "get_selector_from_name", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultFieldElement get_selector_from_name(CString name);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "get_selector_from_tag", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement get_selector_from_tag(CString tag);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "hash_get_contract_address", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement hash_get_contract_address(FieldElement class_hash, FieldElement salt, FieldElement* constructor_calldata, UIntPtr constructor_calldata_len, FieldElement deployer_address);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "model_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void model_free(Struct* model);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "on_contract_update", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultSubscription on_contract_update(ToriiClient* client, FieldElement* contract_address, FnPtr_Contract_Void callback);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "parse_cairo_short_string", CallingConvention = CallingConvention.Cdecl)]
        public static extern Resultc_char parse_cairo_short_string(FieldElement felt);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "poseidon_hash", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement poseidon_hash(FieldElement* felts, UIntPtr felts_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "provider_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void provider_free(Provider* rpc);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "provider_new", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultProvider provider_new(CString rpc_url);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "signing_key_new", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement signing_key_new();

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "signing_key_sign", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultSignature signing_key_sign(FieldElement private_key, FieldElement hash);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "starknet_call", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultCArrayFieldElement starknet_call(Provider* provider, Call call, BlockId block_id);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "starknet_keccak", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement starknet_keccak(byte* bytes, UIntPtr bytes_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "string_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void string_free(CString @string);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "subscription_cancel", CallingConvention = CallingConvention.Cdecl)]
        public static extern void subscription_cancel(Subscription* subscription);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "ty_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ty_free(Ty* ty);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "typed_data_encode", CallingConvention = CallingConvention.Cdecl)]
        public static extern ResultFieldElement typed_data_encode(CString typed_data, FieldElement address);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "verifying_key_new", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement verifying_key_new(FieldElement signing_key);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "verifying_key_verify", CallingConvention = CallingConvention.Cdecl)]
        public static extern Resultbool verifying_key_verify(FieldElement verifying_key, FieldElement hash, Signature signature);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "wait_for_transaction", CallingConvention = CallingConvention.Cdecl)]
        public static extern Resultbool wait_for_transaction(Provider* rpc, FieldElement txn_hash);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "world_metadata_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void world_metadata_free(World* metadata);

        #endregion

        #region Types

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_CString_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(CString param);

            public IntPtr Pointer;

            public FnPtr_CString_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_Contract_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(Contract param);

            public IntPtr Pointer;

            public FnPtr_Contract_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_ControllerAccountPtr_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(ControllerAccount* param);

            public IntPtr Pointer;

            public FnPtr_ControllerAccountPtr_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_Entity_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(Entity param);

            public IntPtr Pointer;

            public FnPtr_Entity_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_Event_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(Event param);

            public IntPtr Pointer;

            public FnPtr_Event_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_TokenBalance_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(TokenBalance param);

            public IntPtr Pointer;

            public FnPtr_TokenBalance_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_Token_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(Token param);

            public IntPtr Pointer;

            public FnPtr_Token_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_Transaction_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(Transaction param);

            public IntPtr Pointer;

            public FnPtr_Transaction_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct AttributeFilter
        {
            [FieldOffset(0)] // size = 8
            public CString trait_name_;

            public string trait_name
            {
                get
                {
                    return CString.ToString(trait_name_);
                }
                set
                {
                    trait_name_ = CString.FromString(value);
                }
            }

            [FieldOffset(8)] // size = 8
            public CString trait_value_;

            public string trait_value
            {
                get
                {
                    return CString.ToString(trait_value_);
                }
                set
                {
                    trait_value_ = CString.FromString(value);
                }
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 40, Pack = 8)]
        public struct BlockId
        {
            [FieldOffset(0)] // size = 4
            public BlockId_Tag tag;

            [FieldOffset(8)] // size = 32
            public FieldElement hash;

            [FieldOffset(8)] // size = 8
            public ulong number;

            [FieldOffset(8)] // size = 4
            public BlockTag block_tag;
        }
